--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -1514,9 +1514,7 @@
     "    # convert datatypes\n",
     "    df = df.astype(convert_dict)\n",
     "    \n",
-    "    return df\n",
-    "    \n",
-    "    "
+    "    return df "
    ]
   }
  ],
