--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 72,
    "id": "ac78172d-cfff-4a3b-95fb-c8a4e27ed010",
    "metadata": {},
    "outputs": [
@@ -1044,8 +1044,8 @@
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>173</th>\n",
-       "      <td>7.25</td>\n",
+       "      <th>29</th>\n",
+       "      <td>21.70</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1054,8 +1054,8 @@
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>21.70</td>\n",
+       "      <th>173</th>\n",
+       "      <td>7.25</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1070,13 +1070,13 @@
       "text/plain": [
        "     total_bill  group_size\n",
        "19        16.97         3.0\n",
-       "173        7.25         2.0\n",
-       "119       12.43         2.0\n",
        "29        21.70         2.0\n",
+       "119       12.43         2.0\n",
+       "173        7.25         2.0\n",
        "238       32.83         2.0"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1087,7 @@
     "    index=X_train.index,\n",
     "    columns=X_train.columns[kbest.get_support()]\n",
     ")\n",
-    "X_train_transformed.head()"
+    "X_train_transformed.head().sort_index()"
    ]
   },
   {
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 68,
    "id": "5d71b37d-7ff2-4c8e-9a67-f9f4bfa16f44",
    "metadata": {},
    "outputs": [
@@ -1142,20 +1142,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>total_bill</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>group_size</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>price_per_person</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>tip_percentage</th>\n",
        "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>total_bill</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>price_per_person</th>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1163,13 +1163,13 @@
       ],
       "text/plain": [
        "                  rfe_ranking\n",
-       "total_bill                  2\n",
        "group_size                  1\n",
-       "price_per_person            3\n",
-       "tip_percentage              1"
+       "tip_percentage              1\n",
+       "total_bill                  2\n",
+       "price_per_person            3"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,7 +1181,7 @@
     "# Fit the thing\n",
     "rfe.fit(X_train, y_train)\n",
     "# Obtain results in dataframe\n",
-    "pd.DataFrame({'rfe_ranking': rfe.ranking_}, index=X_train.columns)"
+    "pd.DataFrame({'rfe_ranking': rfe.ranking_}, index=X_train.columns).sort_values(by = 'rfe_ranking')"
    ]
   },
   {
@@ -1296,7 +1296,10 @@
    "source": [
     "### e. \n",
     "- Why do you think select k best and recursive feature elimination might give different answers for the top features? \n",
+    "Kbest looks at each feature in isolation\n",
+    "RFE looks at multiple features - disentangle correclated independent variables\n",
     "\n",
+    "-Example - exam score - coffee consumption and hours of sleep\n",
     "\n",
     "\n",
     "\n",
@@ -1322,101 +1325,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 78,
    "id": "db0652c0-63d6-4fbc-b5ff-3831dfcb48e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def select_kbest(X, y, k):\n",
+    "      \n",
+    "    # Make the filter\n",
+    "    kbest = SelectKBest(f_regression, k=k)\n",
+    "\n",
+    "    # Fit the filter (may need to call with X_train, Y_train or other)\n",
+    "    kbest.fit(X, y)\n",
+    "    \n",
+    "    # Obtain list of top k features to predict tip amount\n",
+    "    return X_train.columns[kbest.get_support()]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "7695f012-d57c-4307-b91e-e0424ca323a4",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>group_size</th>\n",
-       "      <th>tip_percentage</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.206246</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>173</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.710345</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>119</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.144811</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.198157</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>238</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.035638</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     group_size  tip_percentage\n",
-       "19          3.0        0.206246\n",
-       "173         2.0        0.710345\n",
-       "119         2.0        0.144811\n",
-       "29          2.0        0.198157\n",
-       "238         2.0        0.035638"
+       "Index(['total_bill', 'group_size'], dtype='object')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def select_kbest(X, y, k):\n",
-    "    \n",
-    "    # Make the filter\n",
-    "    kbest = SelectKBest(f_regression, k=k)\n",
-    "\n",
-    "    # Fit the filter\n",
-    "    kbest.fit(X_train, y_train)\n",
-    "\n",
-    "    # Obtain results as a dataframe\n",
-    "    kbest_results = pd.DataFrame(dict(p=kbest.pvalues_, f=kbest.scores_), index=X_train.columns)\n",
-    "    kbest_results\n",
-    "    \n",
-    "    # Obtain list of top 2 features to predict tip amount\n",
-    "    X_train.columns[kbest.get_support()]\n",
-    "    \n",
-    "    X_train_transformed = pd.DataFrame(\n",
-    "    kbest.transform(X_train),\n",
-    "    index=X_train.index,\n",
-    "    columns=X_train.columns[kbest.get_support()]\n",
-    ")\n",
-    "X_train_transformed.head()"
+    "select_kbest(X_train, y_train, 2)"
    ]
   },
   {
@@ -1437,11 +1381,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "407c2302-a1e0-4a79-a5da-ead5958bc7fc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def rfe(X, y, n):\n",
+    "    \n",
+    "    model = LinearRegression()\n",
+    "    \n",
+    "    # Make the thing\n",
+    "    rfe = RFE(model, n_features_to_select = n)\n",
+    "    # Fit the thing\n",
+    "    rfe.fit(X, y)\n",
+    "    # Obtain results in\n",
+    "    return X_train.columns[rfe.get_support()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "899efc9d-a49c-4365-b475-f48bdbec274a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['group_size', 'tip_percentage'], dtype='object')"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfe(X_train, y_train, 2)"
+   ]
   },
   {
    "cell_type": "markdown",
